# zeam

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Dockerfile  Dockerfile.prebuilt  README.md  RELEASE.md  build.zig  build.zig.zon  forkchoice_concurrency_analysis.md  test-run-20260219161655.txt
.github/ISSUE_TEMPLATE/: hive-scheduled-failure.md
.github/scripts/: hive-summary.sh
.github/workflows/: auto-release.yml  ci.yml  docker.yml  hive.yml  risc0.yml  shadow-rebase.yml
bench/: README.md  aggregation_bench.zig  forkchoice_ssz_bench.zig  smoke_bench.zig  stf_bench.zig  xmss_bench.zig
bench/common/: fixtures.zig  rng.zig
docs/: shadow-simulation.md  threading_refactor_prototype.md  threading_refactor_slice_a.md  workflow-optimization.md
docs/perf/: README.md  bottleneck-analysis-2026-05.md
docs/perf/baselines/: aggregation.txt  forkchoice_ssz.txt  stf.txt  xmss.txt
docs/perf/devnet/: README.md
docs/perf/devnet/baselines/: 2026-05-13-3da16857-local-fc-aggregate.md  2026-05-13-3da16857-slot_probe.tsv  2026-05-13-56109fcf-mocknet-summary.md  2026-05-13-664c83a3-devnet-summary.md  SUMMARY_TEMPLATE.md
docs/perf/devnet/raw/: .gitignore
docs/perf/profiles/: .gitignore  notes.md
docs/superpowers/plans/: 2026-05-12-perf-devnet-profile.md  2026-05-21-devnet5-aggregated-block-proof.md
docs/superpowers/specs/: 2026-05-12-perf-devnet-profile-design.md  2026-05-21-devnet5-aggregated-block-proof-design.md
pkgs/: tests.zig
pkgs/api/: README.md
pkgs/api/src/: event_broadcaster.zig  events.zig  lib.zig  noop.zig  routes.zig
pkgs/cli/src/: api_server.zig  constants.zig  cpu_count.zig  error_handler.zig  main.zig  metrics_server.zig  node.zig  test_driver.zig
pkgs/cli/src/test/fixtures/: validator-config.yaml
pkgs/cli/test/: integration.zig
pkgs/cli/test/fixtures/: annotated_validators.yaml  config.yaml  validators.yaml
pkgs/client/: build.zig
pkgs/client/src/: lib.zig
pkgs/configs/src/: lib.zig
pkgs/configs/src/configs/: mainnet.zig
pkgs/database/src/: database.zig  interface.zig  lib.zig  lmdb.zig  rocksdb.zig  test_helpers.zig
pkgs/genesis/: build.zig
pkgs/genesis/src/: lib.zig
pkgs/key-manager/src/: lib.zig
pkgs/lmdb/src/: c.zig  lmdb.zig
pkgs/metrics/: README.md
pkgs/metrics/src/: lib.zig
pkgs/network/: MIGRATION.md
pkgs/network/rustlibp2p-bridge/: Cargo.toml
pkgs/network/rustlibp2p-bridge/src/: lib.rs
pkgs/network/src/: ethlibp2p.zig  ethlibp2p_v2.zig  ethp2p.zig  ethp2p_broadcast.zig  ethp2p_broadcast_stub.zig  ethp2p_config.zig  ethp2p_discovery.zig  ethp2p_network.zig  gossip_codec.zig  interface.zig  lib.zig  mock.zig  test.zig
pkgs/node/src/: blocks_by_range_sync.zig  chain.zig  chain_worker.zig  clock.zig  constants.zig  database.zig  deconstruct.zig  followup_worker.zig  forkchoice.zig  invalid_block_cache.zig  lib.zig  locking.zig  net_fetch_worker.zig  network.zig  node.zig  node_registry.zig  rc_beam_state.zig  slot_driver_watchdog.zig  stress.zig  testing.zig  tree_visualizer.zig  utils.zig  validator.zig  validator_client.zig
pkgs/params/src/: lib.zig  types.zig
pkgs/params/src/presets/: mainnet.zig
pkgs/snappyframesz/src/: lib.zig
pkgs/spectest/src/: fixture_kind.zig  fork.zig  fork_choice_runner.zig  generate.zig  generator.zig  json_expect.zig  lib.zig  skip.zig  state_transition_runner.zig  transition.zig
pkgs/spectest/src/containers/: state.zig
pkgs/spectest/src/runner/: api_endpoint_runner.zig  fork_choice_runner.zig  justifiability_runner.zig  networking_codec_runner.zig  slot_clock_runner.zig  ssz_runner.zig  state_transition_runner.zig  verify_signatures_runner.zig
pkgs/state-proving-manager/src/: manager.zig
pkgs/state-transition-runtime/: build.zig
pkgs/state-transition-runtime/src/: main.zig
pkgs/state-transition-runtime/src/ceno/: io.zig
pkgs/state-transition-runtime/src/openvm/: io.zig  lib.zig
pkgs/state-transition-runtime/src/risc0/: io.zig  lib.zig  start.s  syscalls.zig
pkgs/state-transition-runtime/src/sp1/: io.zig  lib.zig
pkgs/state-transition-runtime/src/ziren/: lib.zig  syscalls.zig
pkgs/state-transition-runtime/src/zisk/: io.zig  lib.zig  start.s
pkgs/state-transition/src/: lib.zig  mock.zig  transition.zig  utils.zig
pkgs/testing/: test_xmss_cycle.zig
pkgs/tools-cli/src/: main.zig
pkgs/tools/src/: main.zig
pkgs/types/src/: aggregation.zig  attestation.zig  block.zig  block_signatures_testing.zig  cached_state.zig  lib.zig  mini_3sf.zig  ssz.zig  state.zig  utils.zig  validator.zig  zk.zig
pkgs/utils/src/: cast.zig  clone.zig  event_loop.zig  extend.zig  fmt.zig  fs.zig  lib.zig  log.zig  mix.zig  mixin.zig  partial.zig  process_io.zig  slot_probe.zig  ssz.zig  sync.zig  time.zig
pkgs/xmss/src/: aggregate.zig  aggregation.zig  bench_aggregation.zig  hashsig.zig  lib.zig  shadow_cost.zig
plans/: feat-pregenerated-keys.md
resources/: spec-test-framework.md  zeam.md
rust/: Cargo.toml
rust/hashsig-glue/: Cargo.toml
rust/hashsig-glue/src/: lib.rs
rust/libp2p-glue/: Cargo.toml
rust/libp2p-glue/src/: lib.rs
rust/libp2p-glue/src/req_resp/: configurations.rs  inbound_protocol.rs  mod.rs  outbound_protocol.rs  protocol_id.rs  varint.rs
rust/multisig-glue/: Cargo.toml
rust/multisig-glue/src/: lib.rs
rust/openvm/: Cargo.toml
rust/openvm-glue/: Cargo.toml
rust/openvm-glue/src/: lib.rs
rust/powdr/: Cargo.toml
rust/risc0/: Cargo.toml
rust/risc0-glue/: Cargo.toml
rust/rustglue/: Cargo.toml
rust/rustglue/src/: lib.rs
rust/sp1-glue/: Cargo.toml
rust/sp1-glue/src/: lib.rs
rust/src/: hashsig.rs  lib.rs  libp2p_bridge.rs  openvm.rs
rust/src/req_resp/: configurations.rs  error.rs  handler.rs  inbound_protocol.rs  messages.rs  mod.rs  outbound_protocol.rs  protocol_id.rs  varint.rs
rust/zeam-glue/: Cargo.toml
rust/zeam-glue/src/: lib.rs
rust/ziren-glue/: Cargo.toml
rust/ziren-glue/src/: lib.rs
scripts/: profile-continuous.sh  profile-slice.sh  profile.sh
scripts/devnet-profile/: README.md  capture.sh  parse-slot-probes.awk
scripts/devnet-profile/test/: expected-slot-probe.tsv  sample-log.txt
(+6 files in other folders)
