[workspace]
resolver = "2"
members = [
  "libp2p-glue",
  "openvm-glue",
  "risc0-glue",
  "hashsig-glue",
  "multisig-glue",
]
default-members = ["libp2p-glue", "openvm-glue", "risc0-glue", "hashsig-glue", "multisig-glue"]

[profile.release]
# LTO (Link Time Optimization) is disabled to avoid symbol conflicts between risc0 and openvm.
# Both define the same runtime symbols (like sys_alloc_aligned) which collide when LTO merges
# all code into a single module. Re-enable LTO if building separate binaries for each prover.
lto = false  # Set to true for single-prover builds to reduce binary size from 108MB to ~46MB
strip = "symbols"
codegen-units = 16  # Multiple units keep risc0 and openvm code separate

# Optimized profile for OpenVM-only builds (size reduction, but see opt-level note).
[profile.openvm-release]
inherits = "release"
lto = "off"          # Disable LTO on macOS due to linker issues, keeps symbols separate
# opt-level = "z" triggers a codegen interaction with leanMultisig's prover
# (rec_aggregation / lean_prover / backend) that produces a runtime General
# Protection Exception inside xmss_aggregate on x86_64 Linux. Bisected against
# `zig build run -Dprover=risc0 -- prove -z risc0`: "z" crashes deterministically,
# "s" and numeric levels are clean. Using "s" keeps the size-optimization focus
# without the aggressive inlining/outlining passes that expose the issue.
# Tracked in #734. risc0-release mirrors this setting.
opt-level = "s"      # "s" rather than "z": see comment above and #734
codegen-units = 1    # Better optimization (slower compilation)
panic = "abort"      # Remove unwinding code for smaller binary

# Optimized profile for RISC0-only builds (size reduction, but see opt-level note).
[profile.risc0-release]
inherits = "release"
lto = "off"          # Disable LTO on macOS due to linker issues, keeps symbols separate
# See openvm-release above for why opt-level is "s" and not "z" (#734).
opt-level = "s"
codegen-units = 1    # Better optimization (slower compilation)
panic = "abort"      # Remove unwinding code for smaller binary
