[workspace]
resolver = "2"
members = [
  "libp2p-glue",
  "openvm-glue",
  "risc0-glue",
  "hashsig-glue",
  "multisig-glue",
  "zeam-glue",
]
default-members = ["zeam-glue"]

[profile.release]
# LTO (Link Time Optimization) is disabled to avoid symbol conflicts between risc0 and openvm.
# Both define the same runtime symbols (like sys_alloc_aligned) which collide when LTO merges
# all code into a single module. Re-enable LTO if building separate binaries for each prover.
lto = false  # Set to true for single-prover builds to reduce binary size from 108MB to ~46MB
strip = "symbols"
codegen-units = 16  # Multiple units keep risc0 and openvm code separate

# Optimized profile for OpenVM-only builds (size reduction, but see opt-level note).
[profile.openvm-release]
inherits = "release"
lto = "off"          # Disable LTO on macOS due to linker issues, keeps symbols separate
# The `{opt-level = "z", codegen-units = 1}` combination miscompiles
# leanMultisig's prover on x86_64 Linux (rustc >= 1.95), producing a
# deterministic General Protection Exception inside xmss_aggregate ->
# prove_execution -> eval_virtual_bus_column's inlined SIMD fold. Bisected
# against `zig build run -Dprover=risc0 -- prove -z risc0`:
#   - opt-level = "z" + codegen-units = 1  -> crash
#   - opt-level = "s" + codegen-units = 1  -> clean
#   - opt-level = "z" + codegen-units >= 2 -> clean
# We pick `s` + CGU=1 because it keeps the single-CGU size benefit without
# the aggressive -Oz inlining heuristics that expose the bug. Tracked in
# zeam#734 and leanEthereum/leanMultisig#198.
opt-level = "s"      # "s" rather than "z": see comment above
codegen-units = 1    # Better optimization (slower compilation)
panic = "abort"      # Remove unwinding code for smaller binary

# Optimized profile for RISC0-only builds (size reduction, but see opt-level note).
[profile.risc0-release]
inherits = "release"
lto = "off"          # Disable LTO on macOS due to linker issues, keeps symbols separate
# See openvm-release above for why opt-level is "s" and not "z"
# (zeam#734, leanEthereum/leanMultisig#198).
opt-level = "s"
codegen-units = 1    # Better optimization (slower compilation)
panic = "abort"      # Remove unwinding code for smaller binary
