[package]
name = "hashsig-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.9"
leansig_wrapper = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "1b3cd7465ac38e4b4951c70c99ec693f768fa6c9" }
rand = "0.10.0"
thiserror = "2.0.17"
ssz = { package = "ethereum_ssz", version = "0.10" }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["staticlib"]
name = "hashsig_glue"
