[package]
name = "hashsig-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
leansig = { git = "https://github.com/leanEthereum/leanSig.git", branch = "devnet4" }
leansig_fast_keygen = { git = "https://github.com/TomWambsgans/leanSig.git", branch = "devnet4-fast-keygen" }
sha2 = "0.9"
rand = "0.10.0"
thiserror = "2.0.17"
ssz = { package = "ethereum_ssz", version = "0.10" }

[features]
test-config = []

[lib]
crate-type = ["staticlib"]
name = "hashsig_glue"
