[package]
name = "hashsig-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
leansig = { git = "https://github.com/leanEthereum/leanSig", branch = "devnet4" }
sha2 = "0.9"
rand = "0.10.0"
thiserror = "2.0.17"
ssz = { package = "ethereum_ssz", version = "0.10" }

[features]
test-config = []

[lib]
# Built as an rlib so its `#[no_mangle] pub extern "C"` symbols can be funnelled
# through the `zeam-glue` staticlib shim. See blockblaz/zeam#773.
crate-type = ["rlib"]
name = "hashsig_glue"
