[package]
name = "libp2p-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
# serde = { version = "1.0", features = ["derive"] }
libp2p-mplex = "0.43"
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
# slog = { version = "2", features = ["max_level_debug", "release_max_level_debug", "nested-values"] }
hex = "0.4.3"
lazy_static = "1.5.0"
delay_map = "0.4.1"
tracing = "0.1"

[dependencies.libp2p]
version = "0.55"
default-features = false
features = ["identify", "yamux", "noise", "dns", "tcp", "tokio", "plaintext", "secp256k1", "macros", "ecdsa", "metrics", "quic", "upnp", "ping"]

[lib]
crate-type = ["staticlib"]
