[package]
name = "libp2p-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
# serde = { version = "1.0", features = ["derive"] }
# libp2p-mplex removed in #942 fix: mplex was corrupting inbound gossip
# messages > ~100 KB on the 2026-05-28 devnet (snap::raw::Decoder rejected
# 38/72 inbound blocks while ream/grandine on the same network saw zero
# decode failures). TCP transport now uses yamux exclusively.
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
tokio-io-timeout = "1.2"
unsigned-varint = { version = "0.7", features = ["codec"] }
bytes = "1"
# slog = { version = "2", features = ["max_level_debug", "release_max_level_debug", "nested-values"] }
snap = "1"
sha2 = "0.9"
hex = "0.4.3"
async-trait = "0.1.86"
lazy_static = "1.5.0"
delay_map = "0.4.1"
thiserror = "2.0.11"
tracing = "0.1"

[dependencies.libp2p]
# #942: bumped 0.55 -> 0.56 to pick up libp2p-quic 0.13.0 (was 0.12.0). The
# verified Rust lean clients (ream, grandine) both run libp2p 0.56 / quic 0.13
# and see zero inbound snappy decode failures; the QUIC adapter (libp2p-quic)
# was the only receive-side transport crate where zeam diverged from them
# (yamux 0.12.1, quinn 0.11.9/quinn-proto 0.11.14 were already identical).
version = "0.56"
default-features = false
features = ["identify", "yamux", "noise", "dns", "tcp", "tokio", "plaintext", "secp256k1", "macros", "ecdsa", "metrics", "quic", "upnp", "ping", "gossipsub"]

[lib]
# Built as an rlib so its `#[no_mangle] pub extern "C"` symbols can be funnelled
# through the `zeam-glue` staticlib shim. See blockblaz/zeam#773.
crate-type = ["rlib"]
