[package]
name = "multisig-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
# leanMultisig devnet4 head (2026-05-12). Includes:
#   - 7a71c0f: eq_mle base-case correctness fix
#               (was using packing_width instead of log_packing_width)
#   - 939a767: removed superfluous `#[inline]` in eq_mle — measured +10%
#               on AVX-512 (Hetzner AX42-U), neutral on NEON. This is the
#               same hardware class as the devnet aggregator hosts.
#   - 5fbd5bf: Plonky3 PR #1600 NEON dot-product regression coverage
#   - e5c2183: leanSig dep flipped to `main` (devnet4 merged into main)
#   - f66d4a9: rec_aggregation BenchmarkReport (API-additive, source of
#               the per-node breakdown that lean-bench / op tooling read)
# Devnet operators reported ~16 sig/s on 2eb4b9d (Apr 17) vs ~37 sig/s on
# leanMultisig benchmarks against f66d4a9 — the 939a767 inline removal is
# the dominant contributor on the prod hardware.
rec_aggregation = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "f66d4a974eced803574eb0ea43d812e523c8d7ad" }
leansig_wrapper = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "f66d4a974eced803574eb0ea43d812e523c8d7ad" }
backend = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "f66d4a974eced803574eb0ea43d812e523c8d7ad" }
rayon = "1"

[lib]
# Built as an rlib so its `#[no_mangle] pub extern "C"` symbols can be funnelled
# through the `zeam-glue` staticlib shim. See blockblaz/zeam#773.
crate-type = ["rlib"]
name = "multisig_glue"
