[package]
name = "multisig-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
# leanMultisig prover crates, pinned to the upstream rev carrying the merge/split multi-signature API.
rec_aggregation = { git = "https://github.com/leanEthereum/leanVM.git", rev = "0520822dc64df67886f4a053b60b4de14b181348" }
leansig_wrapper = { git = "https://github.com/leanEthereum/leanVM.git", rev = "0520822dc64df67886f4a053b60b4de14b181348" }
backend = { git = "https://github.com/leanEthereum/leanVM.git", rev = "0520822dc64df67886f4a053b60b4de14b181348" }
rayon = "1"

[lib]
# Built as an rlib so its `#[no_mangle] pub extern "C"` symbols can be funnelled
# through the `zeam-glue` staticlib shim.
crate-type = ["rlib"]
name = "multisig_glue"
