[package]
name = "multisig-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
# leanMultisig prover crates, pinned to the upstream rev carrying the merge/split multi-signature API.
rec_aggregation = { git = "https://github.com/leanEthereum/leanVM.git", rev = "e2592df4e30fdddbbf8ae26a333116c68cec7026" }
leansig_wrapper = { git = "https://github.com/leanEthereum/leanVM.git", rev = "e2592df4e30fdddbbf8ae26a333116c68cec7026" }
backend = { git = "https://github.com/leanEthereum/leanVM.git", rev = "e2592df4e30fdddbbf8ae26a333116c68cec7026" }
rayon = "1"

[lib]
# Built as an rlib so its `#[no_mangle] pub extern "C"` symbols can be funnelled
# through the `zeam-glue` staticlib shim.
crate-type = ["rlib"]
name = "multisig_glue"
