[package]
name = "openvm-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.9"
openvm-platform = { package = "openvm", git = "https://github.com/openvm-org/openvm.git", tag = "v1.3.0", features = ["std"] }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.3.0" }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.3.0" }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.1.1" }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.3.0" }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.3.0" }

[lib]
# Built as an rlib so its `#[no_mangle] pub extern "C"` symbols can be funnelled
# through the `zeam-glue` staticlib shim. See blockblaz/zeam#773.
crate-type = ["rlib"]
name = "openvm_glue"