[package]
name = "zeam-openvm"
version = "0.1.0"
edition = "2021"

[lib]
name = "zeam_openvm"
crate-type = ["staticlib"]

[dependencies]
openvm-platform = { package = "openvm", git = "https://github.com/openvm-org/openvm.git", tag = "v1.3.0", features = ["std"] }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.3.0" }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.3.0" }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.1.1" }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
sha2 = "0.10"
bincode = "1.3"
libc = "0.2"