[package]
name = "risc0-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "3.0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"

[lib]
# Built as an rlib so its `#[no_mangle] pub extern "C"` symbols can be funnelled
# through the `zeam-glue` staticlib shim. See blockblaz/zeam#773.
crate-type = ["rlib"]
name = "risc0_glue"